--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@clerk/nextjs": "^5.7.3",
     "@clerk/themes": "^2.1.36",
     "@electric-sql/pglite": "^0.2.12",
+    "@emran-alhaddad/saudi-riyal-font": "^1.0.3",
     "@hookform/resolvers": "^3.9.0",
     "@logtail/pino": "^0.5.2",
     "@radix-ui/react-accordion": "^1.2.1",
